# pic-standard

./: .gitattributes  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: conformance.yml
conformance/: README.md  adding-a-vector.md  manifest.json  run.py
conformance/artifacts/: README.md  cfo_approval_001.txt  invoice_001.txt
conformance/evidence/: README.md
conformance/evidence/allow/: 001_hash_simple.json  002_sig_simple.json  003_hash_multiple.json  004_mixed_hash_and_sig.json  005_sig_canonical_happy_full.json  006_sig_canonical_happy_minimal.json  007_sig_legacy_json_object_no_version.json  008_sig_legacy_json_array.json  009_mixed_legacy_and_canonical.json
conformance/evidence/block/: 001_hash_mismatch.json  002_hash_file_not_found.json  003_hash_invalid_sha256_format.json  004_sandbox_path_traversal.json  005_sandbox_absolute_outside_root.json  006_sig_payload_tampered.json  007_sig_unknown_key_id.json  008_sig_revoked_key.json  009_sig_expired_key.json  010_sig_payload_too_large.json  011_sig_canonical_tampered_signature.json  012_sig_canonical_raw_byte_sig.json  013_sig_canonical_unknown_version.json  014_sig_canonical_non_string_version.json  015_sig_canonical_duplicate_key_root.json  016_sig_canonical_duplicate_key_nested.json  017_sig_canonical_args_digest_mismatch.json  018_sig_canonical_claims_digest_mismatch.json  019_sig_canonical_intent_digest_mismatch.json  020_sig_canonical_tool_mismatch.json  021_sig_canonical_impact_mismatch.json  022_sig_canonical_provenance_ids_mismatch.json  023_sig_canonical_expires_at_in_past.json  024_sig_canonical_expires_at_whitespace_padded.json  025_sig_canonical_invalid_digest_shape.json  026_sig_canonical_expires_at_naive.json
conformance/trust_sanitization/: README.md  compute_risk__strict-f__verify-f.json  compute_risk__strict-f__verify-t.json  compute_risk__strict-t__verify-f.json  compute_risk__strict-t__verify-t.json  financial_hash_ok__strict-f__verify-f.json  financial_hash_ok__strict-f__verify-t.json  financial_hash_ok__strict-t__verify-f.json  financial_hash_ok__strict-t__verify-t.json  financial_irreversible__strict-f__verify-f.json  financial_irreversible__strict-f__verify-t.json  financial_irreversible__strict-t__verify-f.json  financial_irreversible__strict-t__verify-t.json  privacy_risk__strict-f__verify-f.json  privacy_risk__strict-f__verify-t.json  privacy_risk__strict-t__verify-f.json  privacy_risk__strict-t__verify-t.json  read_only_query__strict-f__verify-f.json  read_only_query__strict-f__verify-t.json  read_only_query__strict-t__verify-f.json  read_only_query__strict-t__verify-t.json  robotic_action__strict-f__verify-f.json  robotic_action__strict-f__verify-t.json  robotic_action__strict-t__verify-f.json  robotic_action__strict-t__verify-t.json
docs/: RFC-0001.SHA256  fail-closed-evidence-mcp.md  spec-core.md  spec-evidence.md  spec-status.md
examples/: _gen_sig_example.py  langgraph_pic_toolnode_demo.py  mcp_pic_client_demo.py  openclaw_pic_bridge_demo.py
integrations/openclaw/: package-lock.json  package.json
integrations/openclaw/hooks/pic-gate/: handler.ts
sdk-python/: crewai_pic_tool.py  evidence_checker.py  requirements-dev.txt  requirements-langgraph.txt  requirements-mcp.txt  validate_proposal.py
sdk-python/pic_standard/: cli.py  evidence.py
tests/: test_cli_keys_command.py  test_cli_windows_encoding.py  test_conformance_runner.py  test_evidence_canonical_signing.py
