[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pic-standard"
version = "0.8.1.1"
description = "PIC Standard: Provenance & Intent Contracts for agentic side-effect governance"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Fabio Marcello Salvadori" }]
dependencies = [
  "pydantic>=2.0.0",
  "jsonschema>=4.0.0",
]

[project.optional-dependencies]
langgraph = [
  "langchain-core>=0.1.0",
]

# Needed for v0.4 signature evidence verification (Ed25519).
crypto = [
  "cryptography>=42.0.0,<50",
]

# Optional MCP integration deps (kept tight to avoid example breakage).
mcp = [
  "mcp>=1.27.1,<2",
]

[project.urls]
Homepage = "https://github.com/madeinplutofabio/pic-standard"
Repository = "https://github.com/madeinplutofabio/pic-standard"
Issues = "https://github.com/madeinplutofabio/pic-standard/issues"

[project.scripts]
pic-cli = "pic_standard.cli:main"

[tool.setuptools]
package-dir = {"" = "sdk-python"}

[tool.setuptools.packages.find]
where = ["sdk-python"]

[tool.setuptools.package-data]
pic_standard = ["schemas/*.json"]

# ------------------------------------------------------------------
# Code style enforcement (OpenSSF Best Practices, Passing tier)
# ------------------------------------------------------------------

[tool.ruff]
# Lowest-supported Python version. Ruff uses this to tune lint defaults.
target-version = "py310"
# Sensible line length for protocol-grade code with descriptive names; matches
# the Prettier line length used in integrations/openclaw for cross-language
# consistency.
line-length = 100
# Vendored third-party module (Trail of Bits rfc8785.py, Apache 2.0).
# We don't reformat upstream code; PIC-specific behavior lives in
# pic_standard.canonical which wraps the vendored module.
extend-exclude = [
  "sdk-python/pic_standard/_rfc8785.py",
]

[tool.ruff.lint]
# Conservative baseline for this PR. Rule families enabled:
#   E   pycodestyle errors
#   F   pyflakes (unused imports, undefined names — high value)
#   W   pycodestyle warnings
#   I   isort (import sorting)
#   N   pep8-naming
#   B   bugbear (likely-bug patterns)
#   SIM simplify (suggest simpler equivalents)
#   RUF ruff-specific
#
# Intentionally NOT enabled in this PR (deferred to a later tightening pass):
#   UP  pyupgrade — would force widespread `Optional[X]` → `X | None` and
#       `List[int]` → `list[int]` rewrites across the codebase. Useful but
#       widens this PR's diff with non-essential modernization; better as a
#       focused follow-up so reviewers can evaluate it as one coherent change.
#
# Add per-file-ignores below for genuine exceptions; use `# noqa: <RULE>`
# inline for one-off documented escapes.
select = ["E", "F", "W", "I", "N", "B", "SIM", "RUF"]

# Per-file ignores — kept minimal; add only when an exception is genuinely
# documented and reviewable.
[tool.ruff.lint.per-file-ignores]
# Tests intentionally do unusual things (long lines for explicit test data,
# unused-import where pytest discovers fixtures, etc.). Loosen the strictest
# line-length rule in tests rather than littering files with `# noqa`.
"tests/**/*.py" = ["E501"]

[tool.ruff.format]
# Defaults are black-equivalent: double-quote strings, magic trailing commas
# preserved, line-ending preserved per-file. No project-specific overrides.

# ------------------------------------------------------------------
# Statement coverage (OpenSSF Best Practices Passing tier, ≥80%)
# ------------------------------------------------------------------

[tool.coverage.run]
# Measure the installed `pic_standard` package by import name. Import-name
# source is more robust than path source across invocation styles (running
# `coverage` from repo root vs. sdk-python/ vs. a CI cwd) — coverage.py
# resolves the import path to the actual on-disk location automatically.
source = ["pic_standard"]
# Statement coverage; branch coverage is a Gold-tier requirement, out of
# scope for this Passing-tier cluster.
branch = false
# Vendored module (_rfc8785.py) is included in measurement (98%+ exercised
# by canonicalization tests). Excluding it would understate our test reach.

[tool.coverage.report]
# OpenSSF Passing-tier threshold. CI runs `coverage report --fail-under=80`
# (gate enforced in .github/workflows/ci.yml).
fail_under = 80
# Show which lines are uncovered when a developer runs `coverage report`
# locally — useful for closing the cli.py gap (~41%, deferred to a future PR).
show_missing = true
# Display percentages to one decimal place so small improvements are visible.
precision = 1
# Lines that don't count toward coverage measurement: pragma-marked,
# main-guards, TYPE_CHECKING blocks, NotImplementedError stubs, ellipsis stubs.
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "\\.\\.\\.",
]

# ------------------------------------------------------------------
# pytest configuration
# ------------------------------------------------------------------

[tool.pytest.ini_options]
# Silence the v0.8 trust-deprecation warning during test runs. The warning is
# documented behavior emitted by `verify_proposal()` when a proposal carries
# `trust="trusted"` and effective evidence verification will not run (see
# docs/migration-trust-sanitization.md). The non-strict-trust pathway is
# intentionally exercised by the test suite to verify v0.7.x-compatible
# behavior is preserved, so these emissions are by design — filtering keeps
# test output focused on actual signal. Remove this filter when the test
# corpus migrates to evidence-backed proposals (v0.8.2 / v0.9.x).
filterwarnings = [
  "ignore::pic_standard.pipeline.PICTrustFutureWarning",
]
